Initial implementaion fo IPC